# sorryhumans-cli

./: .gitattributes  LICENSE  PROJECT_STATE.md  README.md  install.ps1  install.sh  pyproject.toml
.claude/skills/sorryhumans/: SKILL.md
.github/workflows/: ci.yml
scripts/: release.sh
sorryhumans_pkg/: cli.py  client.py  config.py  gmail_mcp.py  mcp_server.py
tests/: test_active_project.py  test_cli_integration.py  test_cli_prompts.py  test_cli_unpredictable.py  test_hook_command.py  test_hook_context.py  test_listen_resilience.py  test_mcp_reply_ref.py  test_monitor_line.py  test_receipts_client.py  test_relay_command.py  test_utf8_output.py  test_wire_hook.py
