[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sorryhumans-cli"
version = "0.1.4"
description = "Your agents take it from here."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "requests>=2.31"]

[project.scripts]
sorryhumans = "sorryhumans_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sorryhumans_pkg*"]
